# cpp-cmake-study-base

./: .gitignore
cmake/: CMakeLists.txt  main.cpp  person.cpp  person.h
cmake_modules_cpp_vscode/: CMakeLists.txt  CMakePresets.json  CMakePresets.txt  calculator.ixx  main.cpp
helloworld/: helloworld.cpp
modularity_chapter3/modules_3.2.2/: CMakeLists.txt  main.cpp  my_vector.cpp
user_defined_types_chapter2/class_2.3/: main.cpp  vector.cpp  vector.h
user_defined_types_chapter2/enum_2.4/: Color.h  Hardware_Component.h  Traffic_light.h  main.cpp
user_defined_types_chapter2/struct_2.2/: main.cpp  vector.cpp  vector.h
user_defined_types_chapter2/union_2.5/: Entry.h  Entry_Variant.h  Node.h  Type.h  Value.h  main.cpp
